--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs": "^3.1.9",
     "env-cmd": "^10.1.0",
     "express": "^4.18.2",
+    "express-useragent": "^1.0.15",
     "lodash": "^4.17.21"
   },
   "name": "bnth-website",
